modificar reserva html

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -45,16 +45,16 @@
                     <p>Agenda una nueva reserva</p>
                 </mat-card>
 
-                <mat-card class="option-card" (click)="openGlobalDialog('')">
+                <mat-card class="option-card" (click)="openGlobalDialog('modificarreserva')">
                     <mat-icon>calendar_today</mat-icon>
                     <h3>Modificar Reserva</h3>
                     <p>Ver y gestionar tus reservas</p>
                 </mat-card>
 
-                <mat-card class="option-card" (click)="openGlobalDialog('')">
+                <mat-card class="option-card" (click)="openGlobalDialog('cancelarreserva')">
                     <mat-icon>cancel</mat-icon>
                     <h3>Cancelar Reserva</h3>
-                    <p>Gestiona tus reservas</p>
+                    <p>Elimina alguna de tus reservas</p>
                 </mat-card>
             </div> 
 
