--- a/src/app/components/inquilino/modificar-reserva/modificar-reserva.component.html
+++ b/src/app/components/inquilino/modificar-reserva/modificar-reserva.component.html
@@ -1,1 +1,48 @@
-<p>modificar-reserva works!</p>
+<div class="modificar-reserva-container">
+    <mat-card>
+        <mat-card-content>
+            <form [formGroup]="editarReservaForm" (ngSubmit)="onSubmit()">
+                <mat-form-field appearance="outline">
+                    <mat-label>Fecha de Check-in</mat-label>
+                    <input matInput [matDatepicker]="checkinPicker" formControlName="fechaCheckIn" required>
+                    <mat-error *ngIf="editarReservaForm.get('fechaCheckIn')?.hasError('required')">
+                        La fecha de check-in es requerida
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Fecha de Check-out</mat-label>
+                    <input matInput [matDatepicker]="checkoutPicker" formControlName="fechaCheckOut" required>
+                    <mat-error *ngIf="editarReservaForm.get('fechaCheckOut')?.hasError('required')">
+                        La fecha de check-out es requerida
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Adultos</mat-label>
+                    <input matInput type="number" formControlName="cantAdultos" min="1" required>
+                    <mat-error *ngIf="editarReservaForm.get('cantAdultos')?.hasError('required')">
+                        Cantidad de adultos requerida
+                    </mat-error>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Niños</mat-label>
+                    <input matInput type="number" formControlName="cantNinos" min="0">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Bebés</mat-label>
+                    <input matInput type="number" formControlName="cantBebes" min="0">
+                </mat-form-field>
+
+                <mat-form-field appearance="outline">
+                    <mat-label>Mascotas</mat-label>
+                    <input matInput type="number" formControlName="cantMascotas" min="0">
+                </mat-form-field>
+
+                <button mat-raised-button color="primary" type="submit">Guardar Cambios</button>
+            </form>
+        </mat-card-content>
+    </mat-card>
+</div>
