pantallas del admin

--- a/src/app/components/administrador/eliminacion-servicio/eliminacion-servicio.component.html
+++ b/src/app/components/administrador/eliminacion-servicio/eliminacion-servicio.component.html
@@ -1,7 +1,7 @@
 <div class="servicio-container">
     <mat-card>
       <mat-card-header>
-        <mat-card-title>Eliminación de Servicios</mat-card-title>
+        <mat-card-title>Lista de servicios</mat-card-title>
       </mat-card-header>
   
       <mat-card-content>
